syntax = "proto3";

package healthcheck.options.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/healthcheck";


import "github.com/solo-io/solo-kit/api/v1/ref.proto";

import "extproto/ext.proto";
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;
option (extproto.equal_all) = true;

import "google/protobuf/wrappers.proto";

// Add this config to a Listener/Gateway to Enable Envoy Health Checks on that port
message HealthCheck {
    // match health check requests using this exact path
    string path = 1;
}
